@@ -15,6 +15,8 @@
 			<END>"</END>
 		</SPAN>
 
+		<SEQ TYPE="NULL">'event</SEQ>
+
 		<SPAN TYPE="LITERAL1" NO_LINE_BREAK="TRUE">
 			<BEGIN>'</BEGIN>
 			<END>'</END>
